-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.1.0, Qt Creator 4.2.0
-
Windows
-
55d69971544f7ccc57618164c8ab86fefd22e327
When loading a qtd file in Qt Creator, the pixmap cache size shows a weird (probably uninitialized) variable. When actually profiling a program, the value looks somewhat reasonable.
Attached image of the error, and a qtd file which can reproduce the issue. Also attached a program that can be profiled to see the "live" results.
For Gerrit Dashboard: QTCREATORBUG-17424 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
179766,3 | QmlProfiler: Only show pixmap cache size on cache change events | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |