QmlProfiler: Only show pixmap cache size on cache change events

... and make the default size 0, rather than -1. Showing cache sizes
for individual pixmaps doesn't make much sense as other pixmaps might
get loaded at the same time.

Task-number: QTCREATORBUG-17424
Change-Id: Iead21c21d87b454ef03961d22119e0f5351d11ea
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Milian Wolff <milian.wolff@kdab.com>